<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.reactive-toolbox</groupId>
    <artifactId>reactive-toolbox-parent</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
        <module>core</module>
        <module>codec</module>
        <module>event-bus</module>
        <module>web-server</module>
    </modules>
    <packaging>pom</packaging>

    <name>Reactive Toolbox</name>
    <description>Set of libraries for reactive services</description>
    <url>http://www.reactive-toolbox.org</url>

    <scm>
        <url>https://github.com/siy/reactive-toolbox.git</url>
    </scm>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Dependencies versions -->
        <vertx.version>3.6.3</vertx.version>
        <ignite.version>2.7.0</ignite.version>
        <log4j.version>2.11.2</log4j.version>
        <lombok.version>1.18.8</lombok.version>
        <undertow.version>[2.0.23,)</undertow.version>

        <!-- Testing -->
        <junit.version>5.4.0</junit.version>
        <junit.platform.version>1.4.0</junit.platform.version>
        <assertj.version>3.11.1</assertj.version>

        <!-- Plugins -->
        <maven-shade-plugin.version>3.2.0</maven-shade-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>codec</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>web-server</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.reactive-toolbox</groupId>
                <artifactId>event-bus</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Logging -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-runner</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.4</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <propertyName>jaCoCoArgLine</propertyName>
                        </configuration>
                    </execution>
                    <!-- attached to Maven test phase -->
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <configuration>
                    <argLine>
                        --enable-preview
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.async=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.functional=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.scheduler=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.core/org.reactivetoolbox.core.scheduler.impl=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.eventbus/org.reactivetoolbox.eventbus=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.eventbus/org.reactivetoolbox.eventbus.impl=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.web/org.reactivetoolbox.web.server=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.codec/org.reactivetoolbox.value.conversion.type=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.codec/org.reactivetoolbox.json=ALL-UNNAMED
                        --add-opens org.reactivetoolbox.codec/org.reactivetoolbox.json.beans=ALL-UNNAMED
                        ${jaCoCoArgLine}
                        -Xmx1024m
                    </argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.5</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <release>12</release>
                    <!--					<verbose>true</verbose>-->
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>
        </plugins>
    </build>
</project>